--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "sass": "^1.56.1",
         "tailwindcss": "^3.2.6",
         "vite": "^4.1.1"
+    },
+    "dependencies": {
+        "react-table": "^7.8.0"
     }
 }
